fixed overlapping hidden list

--- a/src/components/Dashboard/GroupCard/group-card.module.scss
+++ b/src/components/Dashboard/GroupCard/group-card.module.scss
@@ -56,6 +56,8 @@
       }
     }
     .hideMemberList {
+      position: relative;
+      z-index: -10;
       margin: 0.5rem 0;
       list-style: none;
 
